--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -1,9 +1,3 @@
-.container {
-  background-color: gray;
-  z-index: 0;
-  text-align: center;
-}
-
 .menu {
   background-color: black;
   color: white;
@@ -13,12 +7,10 @@
   width: 20%;
   padding: 20px;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  z-index: 1;
-  text-align: center;
 }
 
 .items {
@@ -30,5 +22,4 @@
   color: white;
   font-size: x-large;
   font-family: Dragon-Quest;
-  z-index: 3;
 }
