--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,25 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0px;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
+.container {
+  background-color: rgb(228, 228, 228);
+  z-index: 0;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 @font-face {
@@ -21,8 +28,4 @@ a {
   font-style: normal;
   font-weight: normal;
   font-display: swap;
-}
-
-link-txt {
-  font-family: Dragon-Quest;
 }
